# assembler

./: .gdb_history  .tets.c.swp  CMakeLists.txt  Makefile  README.txt  assembler  assembler.c  assembler.h  macro.as  output.txt  symbol_table.txt  temp.as  temp.c  temp.ext  tets.c
include/: first_pass.h  instruction_handler.h  logger.h  output_generator.h  second_pass.h  slist.h
src/: first_pass.c  instruction_handler.c  logger.c  output_generator.c  queue.c  second_pass.c  slist.c
tests/: README.me  output.txt  test1.as
tests/ok/: o1.ext  o2.ent  o2.ext  o3.ent
utils/: Makefile  binary  symbol_table.txt
utils/include/: assembler_helper.h  assembler_metadata.h  assembly_IR.h  avl.h  logger.h  macro_table.h  queue.h  slist.h  symbol_table.h
utils/src/: assembler_metadata.c  assembly_IR.c  avl.c  logger.c  macro_table.c  queue.c  slist.c  symbol_table.c
utils/test/: assembly_IR_test.c  logger.c  macro_table_test.c  symbol_table_test.c
